# 2048

./: README.md  __init__.py  __main__.py  check_db.py  create_db.py  game.db  game_data.db  game_data.sqbpro  game_stats.json  high_scores.json  requirements.txt  save_game.json  settings.json  setup.cfg  setup.py  themes.json
core/: __init__.py  achievements.py  board.py  database.py  database_manager.py  error_handler.py  functional.py  game.py  player.py  save_manager.py  settings.py  statistics.py  validator.py
docs/: venv_guide.md
modes/: __init__.py  ai_assistant.py  challenge_mode.py  classic_ai_mode.py  obstacles_mode.py  theme_colors.py  time_mode.py  timer_mode.py  two_player_mode.py
saves/autosave/: 20250608_182018.json  20250611_101920.json
tests/: test_game.py
ui/: animations.py  display.py  input_handler.py  theme_manager.py
