[metadata]
name = game2048
version = 1.0.0
description = Implementacja gry 2048 w Pythonie z dodatkowymi funkcjami
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    colorama>=0.4.6
    matplotlib==3.7.1
    numpy==1.24.3
    sqlalchemy>=2.0.0
    pytest>=7.3.1

[options.extras_require]
dev =
    black>=23.3.0
    flake8>=6.0.0
    mypy>=1.3.0
    pytest>=7.3.1
    pytest-cov>=4.0.0
    sphinx>=7.0.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info
ignore = E203, W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=game2048 --cov-report=term-missing

[coverage:run]
source = game2048
omit = tests/*,setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:
    raise NotImplementedError
    pass
    raise ImportError 